# stm32-emulator

./: .clang-format  CMakeLists.txt  README.md
res/: app.qrc
src/app/: CMakeLists.txt  application.cpp  application.hpp  main.cpp
src/app/models/: assembly_view_model.cpp  assembly_view_model.hpp  settings.cpp  settings.hpp
src/app/utils/: general.hpp
src/app/widgets/: assembly_view.cpp  assembly_view.hpp  custom_splitter.cpp  custom_splitter.hpp  hex_view.cpp  hex_view.hpp  main_menu.cpp  main_menu.hpp  main_toolbar.cpp  main_toolbar.hpp  memory_view.cpp  memory_view.hpp  registers_view.cpp  registers_view.hpp
src/app/windows/: main_window.cpp  main_window.hpp  main_window_ui.cpp  main_window_ui.hpp
src/stm32/: CMakeLists.txt  cpu.cpp  cpu.hpp  cpu_instructions.cpp  cpu_register_set.cpp  cpu_register_set.hpp  math.hpp  memory.cpp  memory.hpp  mpu.cpp  mpu.hpp  opcodes.cpp  opcodes.hpp  stm32.cpp  stm32.hpp  system_bus.cpp  system_bus.hpp  system_control_registers.cpp  system_control_registers.hpp  utils.hpp
src/stm32/registers/: cpu_registers.hpp  cpu_registers_set.cpp  cpu_registers_set.hpp  mpu_registers.hpp  mpu_registers_set.cpp  mpu_registers_set.hpp  nvic_registers.hpp  nvic_registers_set.cpp  nvic_registers_set.hpp  sys_tick_registers.hpp  sys_tick_registers_set.cpp  sys_tick_registers_set.hpp  system_control_registers.hpp  system_control_registers_set.cpp  system_control_registers_set.hpp
src/stm32/system_control/: mpu_registers.hpp  mpu_registers_set.cpp  mpu_registers_set.hpp  nvic_registers.hpp  nvic_registers_set.cpp  nvic_registers_set.hpp  sys_tick_registers.hpp  sys_tick_registers_set.cpp  sys_tick_registers_set.hpp  system_control_registers.hpp  system_control_registers_set.cpp  system_control_registers_set.hpp
src/stm32/utils/: exceptions.hpp  general.hpp  math.hpp
test/app/: CMakeLists.txt
test/programs/: .gitignore  Cargo.toml  memory.x
test/programs/.cargo/: config
test/programs/src/: blink.rs
test/stm32/: CMakeLists.txt  test.cpp  test_cpu.hpp  test_math.hpp  test_memory.hpp  test_system_control_registers.hpp  utils.hpp
