[package]
authors = ["Rexagon <reide740@gmail.com>"]
edition = "2018"
name = "programs"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"

[dependencies.stm32f1]
version = "0.11.0"
features = ["stm32f103", "rt"]

[[bin]]
name = "blink"
path = "src/blink.rs"
test = false
bench = false

[profile.release]
codegen-units = 1
debug = true
lto = true
